k8s/nginx/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: nginx-compress
spec:
  compress: {}
