k8s/nginx/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:   
  name: nginx
  labels:     
    name: prod
