k8s/nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
 ports:
  - port: 80
    targetPort: 80
    protocol: TCP
 selector:
     app: nginx
