k8s/nginx/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`web.abe.zone`)
      kind: Rule
      services:
        - name: nginx-service
          port: 80
  tls: {}
